nav-top realizado

--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    
+        <header>
+            <div class="nav-top">
+                <div class="container">
+                    <div>
+                        <a href="#">
+                            <i class="fas fa-envelope"></i>
+                            <span>rovers@gmail.com</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <i class="fas fa-phone"></i>
+                            <span>91 555 66 77</span>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="#">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span>Carrito Compra</span>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="#">
+                            <i class="fas fa-user-circle"></i>
+                            <span>Usuarios</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <nav>
+                <div class="container">
+                    <figure>
+                        <img src="./images/logo.jpg" alt="Hamburgueseria Rovers">
+                    </figure>
+                    <div class="hamburguesa">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <ul class="menu">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                    </ul>
+                </div>
+            </nav>
+         </header>
+
+
+
+    </div>
     
 </body>
 </html>
