Eliminacion de errores de visualizacion de header

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/reset.css">
+    <title>Hamburguesería Robers</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+
+    <div class="wrapper">
         <header>
             <div class="nav-top">
                 <div class="container">
@@ -57,11 +59,11 @@
                     </ul>
                 </div>
             </nav>
-         </header>
-
-
-
+        </header>
     </div>
-    
+
+
+
 </body>
+
 </html>
