--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <nav>
                 <div class="container">
                     <figure>
-                        <img src="./images/logo.jpg" alt="Hamburgueseria Rovers">
+                        <a href="index.html">
+                            <img src="./images/logo.jpg" alt="Hamburgueseria Rovers">
+                        </a>
                     </figure>
                     <div class="hamburguesa">
                         <div></div>
@@ -53,7 +55,7 @@
                         <div></div>
                     </div>
                     <ul class="menu">
-                        <li><a href="index.html">Inicio</a></li>
+                        <li><a  class=¨activo¨ href="index.html">Inicio</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="blog.html">Blog</a></li>
                     </ul>
@@ -63,7 +65,9 @@
     </div>
 
 
-
+<footer>
+    
+</footer>
 </body>
 
 </html>
