--- a/index.html
+++ b/index.html
@@ -62,12 +62,21 @@
                 </div>
             </nav>
         </header>
+        <main></main>
+        <footer>
+            <div class="container">
+             <p>Copyright&copy;2024 -<a href="#">Aviso Legal</a>-<a href="#">Coockies</a></p>
+    </div>
+</footer>
+<div class="flecha">
+        <a href="#top" class="fas fa-caret-square-up"></a>
+
     </div>
 
+</div>
 
-<footer>
-    
-</footer>
+
+
 </body>
 
 </html>
