Fin de servicios

--- a/index.html
+++ b/index.html
@@ -97,7 +97,46 @@
 
         </div>
 
-        <main></main>
+        <main>
+            <section id="services">
+                <h2>Our <span>Services</span></h2>
+                <div class="underline">
+                    <hr noshade="noshade"> 
+                    <span></span>
+                </div>
+
+                <div class="grid">
+                    <article>
+                        <div>
+                            <i class="fas fa-cogs"></i>
+                        </div>
+                        <h3>1. Carne 100x100 natural</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iste. Excepturi itaque, sapiente perferendis dolore eveniet totam. Commodi facilis sint veritatis id laudantium illum? At dolorum itaque soluta temporibus nisi.</p>
+                        <a href="" class="enlace">Leer más<i class="fas fa-long-arrow-alt-right"></i></a>
+                    </article>
+                    <article>
+                        <div>
+                            <i class="fas fa-cogs"></i>
+                        </div>
+                        <h3>2. Cocina moderna</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iste. Excepturi itaque, sapiente perferendis dolore eveniet totam. Commodi facilis sint veritatis id laudantium illum? At dolorum itaque soluta temporibus nisi.</p>
+                        <a href="" class="enlace">Leer más<i class="fas fa-long-arrow-alt-right"></i></a>
+                    </article>
+                    <article>
+                        <div>
+                            <i class="fas fa-cogs"></i>
+                        </div>
+                        <h3>3. Servicio impecable</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iste. Excepturi itaque, sapiente perferendis dolore eveniet totam. Commodi facilis sint veritatis id laudantium illum? At dolorum itaque soluta temporibus nisi.</p>
+                        <a href="" class="enlace">Leer más<i class="fas fa-long-arrow-alt-right"></i></a>
+                    </article>
+                 
+
+
+
+                </div>
+            </section>
+        </main>
 
         <footer>
             <div class="container">
