hemos acabado con main

--- a/index.html
+++ b/index.html
@@ -136,6 +136,41 @@
 
                 </div>
             </section>
+            <section id="aboutus">
+                <h2>About <span>Us</span></h2>
+                <div class="underline">
+                    <hr noshade="noshade"> 
+                    <span></span>
+                </div>
+                <div class="flex">
+                    <figure>
+                        <div class="image">
+                            <div class="marco">
+                                <img src="./images/about-main.jpg" alt="">
+                            </div>
+                        </div>
+                    </figure>
+
+
+                    <div>
+                        <h3>The history</h3>
+                        <h4>Our restaurant</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, omnis dolor corporis quasi vel eius, facilis ducimus quia officia praesentium est impedit aut ad consectetur assumenda. Maxime amet velit voluptatem?</p>
+                        <div>
+                           <div>
+                    <a href="" class="botton">
+                        Nuestra Carta
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </a>
+                </di>
+
+
+
+                        </div>
+                    </div>
+                </div>
+
+            </section>
         </main>
 
         <footer>
