--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body id="top">
 
     <div class="wrapper">
         <header>
@@ -55,138 +55,129 @@
                         <div></div>
                     </div>
                     <ul class="menu">
-                        <li><a  class=¨activo¨ href="index.html">Inicio</a></li>
+                        <li><a class="activo" href="index.html">Inicio</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
             </nav>
         </header>
-
         <div class="hero">
             <div class="container">
                 <h1>Las mejores hamburguesas del mundo</h1>
-            <h2>Bienvenido a nuestra hamburgueseria</h2>
-            <p>Come a partir de 15&euro;</p>
+                <h2>Bienvenido a nuestra hamburguesería</h2>
+                <p>Come a partir de 15&euro;</p>
                 <div>
-                    <a href="" class="botton">
+                    <a href="" class="boton">
                         Nuestra Carta
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </a>
                 </div>
-                    <ul class="social">
-                        <!--li*3>a>i-->
-                        <li>
-                            <a href="">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </li>
-                    </ul>
+                <ul class="social">
+                    <!-- la regla de emmet li*3>a>i  -->
+                    <li>
+                        <a href="">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+
+                </ul>
             </div>
-            
-
         </div>
-
         <main>
             <section id="services">
-                <h2>Our <span>Services</span></h2>
-                <div class="underline">
-                    <hr noshade="noshade"> 
-                    <span></span>
-                </div>
+                <div class="container">
+                    <h2>Our <span>Services</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
 
-                <div class="grid">
-                    <article>
-                        <div>
-                            <i class="fas fa-cogs"></i>
-                        </div>
-                        <h3>1. Carne 100x100 natural</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iste. Excepturi itaque, sapiente perferendis dolore eveniet totam. Commodi facilis sint veritatis id laudantium illum? At dolorum itaque soluta temporibus nisi.</p>
-                        <a href="" class="enlace">Leer más<i class="fas fa-long-arrow-alt-right"></i></a>
-                    </article>
-                    <article>
-                        <div>
-                            <i class="fas fa-cogs"></i>
-                        </div>
-                        <h3>2. Cocina moderna</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iste. Excepturi itaque, sapiente perferendis dolore eveniet totam. Commodi facilis sint veritatis id laudantium illum? At dolorum itaque soluta temporibus nisi.</p>
-                        <a href="" class="enlace">Leer más<i class="fas fa-long-arrow-alt-right"></i></a>
-                    </article>
-                    <article>
-                        <div>
-                            <i class="fas fa-cogs"></i>
-                        </div>
-                        <h3>3. Servicio impecable</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, iste. Excepturi itaque, sapiente perferendis dolore eveniet totam. Commodi facilis sint veritatis id laudantium illum? At dolorum itaque soluta temporibus nisi.</p>
-                        <a href="" class="enlace">Leer más<i class="fas fa-long-arrow-alt-right"></i></a>
-                    </article>
-                 
+                    <div class="grid">
+                        <article>
+                            <div>
+                                <i class="fas fa-cogs"></i>
+                            </div>
+                            <h3>1. Carne 100% natural</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore itaque omnis accusamus animi illo neque ipsa dolorem totam distinctio fugiat!</p>
+                            <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
 
+                        </article>
 
+                        <article>
+                            <div>
+                                <i class="fas fa-cogs"></i>
+                            </div>
+                            <h3>1. Carne 100% natural</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore itaque omnis accusamus animi illo neque ipsa dolorem totam distinctio fugiat!</p>
+                            <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
 
+                        </article>
+
+                        <article>
+                            <div>
+                                <i class="fas fa-cogs"></i>
+                            </div>
+                            <h3>1. Carne 100% natural</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore itaque omnis accusamus animi illo neque ipsa dolorem totam distinctio fugiat!</p>
+                            <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+
+                        </article>
+
+                    </div>
                 </div>
             </section>
             <section id="aboutus">
-                <h2>About <span>Us</span></h2>
-                <div class="underline">
-                    <hr noshade="noshade"> 
-                    <span></span>
-                </div>
-                <div class="flex">
-                    <figure>
-                        <div class="image">
-                            <div class="marco">
-                                <img src="./images/about-main.jpg" alt="">
+                <div class="container">
+                    <h2>About <span>Us</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+
+                    <div class="flex">
+                        <figure>
+                            <div class="imagen">
+                                <div class="marco">
+                                    <img src="./images/about-main.jpg" alt="">
+                                </div>
                             </div>
-                        </div>
-                    </figure>
-
-
-                    <div>
-                        <h3>The history</h3>
-                        <h4>Our restaurant</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, omnis dolor corporis quasi vel eius, facilis ducimus quia officia praesentium est impedit aut ad consectetur assumenda. Maxime amet velit voluptatem?</p>
+                        </figure>
                         <div>
-                           <div>
-                    <a href="" class="botton">
-                        Nuestra Carta
-                        <i class="fas fa-long-arrow-alt-right"></i>
-                    </a>
-                </di>
-
-
-
+                            <h3>The history</h3>
+                            <h4>Our Restaurant</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem corrupti in eveniet ipsa! Sed repudiandae culpa unde, odit nobis explicabo dolorum animi cum tenetur error optio aspernatur doloribus magni. Fuga.</p>
+                            <div>
+                                <a href="" class="boton">
+                                    Leer más
+                                    <i class="fas fa-long-arrow-alt-right"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-
             </section>
         </main>
-
         <footer>
             <div class="container">
-                <p>Copyright&copy;2024 -<a href="#">Aviso Legal</a>-<a href="#">Coockies</a></p>
-             </div>
+                <p>Copyright&copy;2024 - <a href="#">Aviso legal</a> - <a href="">Cookies</a></p>
+            </div>
         </footer>
-<div class="flecha">
-        <a href="#top" class="fas fa-caret-square-up"></a>
+        <div class="flecha">
+            <a href="#top"><i class="fas fa-caret-square-up"></i></a>
+        </div>
 
     </div>
-
-</div>
-
-
-
 </body>
 
 </html>
